Proxy improvement (#23)
* Default methods for those in Object: equals, hashCode, toString

* Default methods delegating to interface default methods

* Multiple JDK setup

* Added AsmLookupProvider to proxy default methods

* Add tests, proxy documentation and a `luajava_lookup` switch